--- a/firstApp/app/views/articles/show.html.erb
+++ b/firstApp/app/views/articles/show.html.erb
@@ -1,4 +1,12 @@
 <h1><%= @article.title %></h1>
 <p><%= @article.body %></p>
-<br><br><br>
 <%= link_to "<< Back to Articles List", articles_path %>
+
+<h3>Comments (<%= @article.comments.size %>)</h3>
+
+<%= render partial: 'comments/form' %>
+
+
+<%  if ( @article.comments.size > 0 ) %>
+<%= render partial: 'articles/comment' %> 
+<% end %> 
