--- a/firstApp/app/views/articles/_comment.html.erb
+++ b/firstApp/app/views/articles/_comment.html.erb
@@ -2,12 +2,17 @@
 
 
 <% @article.comments.each do |comment| %>
+    
     <li>
+    
+    <h4>Comment by <%= comment.author_name %></h4>
+    <p class="comment"><%= comment.body %></p>
 
-	<h4>Comment by <% =comment.author_name %></h4>
-  	<p><% =comment.body %></p>
+	<p>Posted <%= distance_of_time_in_words(comment.article.created_at, comment.created_at) %> later</p>
 
-    </li>
+
+
+	</li>
 
 <% end %>
 
